# learnQtQuick

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
